--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "dependencies": {
 		"modernizr": "latest",
         "jquery": "1.11.0",
-        "bootstrap": "latest"
+        "bootstrap": "latest",
+        "angularjs": "latest"
     }
 }
